# pulsar

./: .env.example  .gitignore  README.md  TurkeyMapNew.tsx  generate_presentation_charts.py  hroformat.txt  index.html  install.py  mimari.md  omni_index.html  omni_monthly_index.html  omni_readme.txt  omni_sc_index.html  package-lock.json  package.json  vite.config.ts
data/advanced_science/: kyoto_dst_halloween_2003.csv  soho_lasco_cme_2023.json  supermag_stations.json
data/models/: xgboost-model.json  xgboost-model.meta.json  xgboost-model.p10.json  xgboost-model.p90.json
data/training/: manifest.json  storm-feb-2026.csv  storm-halloween-2003.csv  storm-jan-2026.csv  storm-may-2024.csv
engine/: .env.example  download_science_datasets.py  patch_imports.py  patch_tle.py  pyproject.toml
engine/helioguard/: __init__.py  analysis.py  app.py  backend_test.py  config.py  data_sources.py  jury_smoke_test.py  physics_engine.py  predictor.py  schemas.py  storage.py  worker.py
engine/helioguard/training/: prepare_omni.py  train_xgboost.py
engine/tests/: test_analysis.py  test_predictor.py
src/: App.tsx  styles.css  styles_old.css
src/components/: CurrentOpsPanel.tsx  DrilldownPanel.tsx  EtaCountdown.tsx  EvidencePanel.tsx  FullTelemetryPanel.tsx  HeatMapPanel.tsx  IntelligencePanel.tsx  KpTimeline.tsx  LiveTerminal.tsx  OperationsHero.tsx  ScientificPanel.tsx  SignalHero.tsx  ThreatBoard.tsx  TimelinePanel.tsx  TopRegionsPanel.tsx  TurkeyMap.tsx  TurkishSatellitePanel.tsx
src/hooks/: useEtaCountdown.ts  useHelioguardFeed.ts
src/lib/: api.ts  config.ts  format.ts  (+2 more)
(+10 files in other folders)
